<resources>
    <string name="app_name">idsApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="prompt_name">Name</string>
    <string name="prompt_age">Age</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register_now">Register now!</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_name">Not a valid name</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>